Version 0.3.0 (released ??-??-2004):

	* Bugs on some ship cargo unload and transfer methods were fixed.

Version 0.2.10 (released 02-02-2004):

	* Several code optimizations on GUI updates.

	* Planet and ship marks restyled.

	* Planets are shown as circles, ships as triangles oriented
	dpeending on their heading.

	* First implementation on ship data: right-click on them to check
	for their info.

	* Implementation of GwpLocation, a new object to group other
	objects on the starchart that are on the same place.

	* Several bug fixes on the new data objects.


Version 0.2.9 (released 01-25-2004):

	* Internal data redesign: planets, starbases and ships now are
	GObjects, part of a object hierarchy that will represent the
	entire data scheme on GWP. This will make very easy the binding to
	another languajes to treat this data.

	* This version doesn't add any new feature, the amount of work
	needed to change the internal data was enough to release a new
	version, the new features will arrive shortly!


Version 0.2.8 (released 06-30-2003):

	* Starbase data are now being loaded.

	* Starbase image shows on planet image when applicable.

	* Initial starbase view UI.

	* Internal data reorganization to be able to save game state.

	* Turns left calculation for mineral extraction on planets.

	* Starchart coordinates are now saved from one GWP execution to
	another.

	* Global Defense Systems calculation on each planet.

	* Some buttons were added to the toolbar, one to toggle the GDS
	panel, the other to show starbase panel.


Version 0.2.7 (released 06-23-2003):

	* Some bugs on the game manager were fixed.

	* Added toolbar with show/hide menu function.

	* Show planet image when double-clicking on it. The image depends
	on planet's temperature.


Version 0.2.6 (released 06-17-2003):

	* Added online help manual.

	* Some UI usability issues on the game manager were fixed.

	* With this release, now GWP website is going dynamic, featuring